pod-uses-pvc-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-example-pod
spec:
  volumes:
    - name: pv-storage-example
      persistentVolumeClaim:
        claimName: pv-claim-example
  containers:
    - name: pv-example-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-storage-example
