database.yaml
---
# DB DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-learn-nodejs
  labels:
    app: db
    tier: learn-nodejs
spec:
  selector:
    matchLabels:
      app: db
      tier: learn-nodejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
        tier: learn-nodejs
    spec:
      containers:
      - image: mysql:latest
        name: mysql
        volumeMounts:
        - name: pv-learn-nodejs
          mountPath: /var/lib/mysql
      volumes:
      - name: pv-learn-nodejs
        persistentVolumeClaim:
          claimName: pv-claim-learn-nodejs
---
# DB SERVICE
apiVersion: v1
kind: Service
metadata:
  name: db-learn-nodejs-svc
  labels:
    app: db
    tier: learn-nodejs
spec:
  selector:
    app: db
    tier: learn-nodejs
  ports:
    - name: db-port
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer
