hello-world-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8080
  type: NodePort
