app-and-database.yaml
---
# APP DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-learn-nodejs
  labels:
    app: app
    tier: learn-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
      tier: learn-nodejs
  template:
    metadata:
      labels:
        app: app
        tier: learn-nodejs
    spec:
      containers:
        - name: learn-nodejs
          image: piinalpin/learn-nodejs
---
# DB DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-learn-nodejs
  labels:
    app: db
    tier: learn-nodejs
spec:
  selector:
    matchLabels:
      app: db
      tier: learn-nodejs
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
        tier: learn-nodejs
    spec:
      containers:
      - image: mysql:latest
        name: mysql
        volumeMounts:
        - name: pv-learn-nodejs
          mountPath: /var/lib/mysql
      volumes:
      - name: pv-learn-nodejs
        persistentVolumeClaim:
          claimName: pv-claim-learn-nodejs
---
# APP SERVICE
apiVersion: v1
kind: Service
metadata:
  name: app-learn-nodejs-svc
  labels:
    app: app
    tier: learn-nodejs
spec:
  selector:
    app: app
    tier: learn-nodejs
  ports:
    - name: app-port
      protocol: TCP
      port: 8001
      targetPort: 8080
  type: LoadBalancer
---
# DB SERVICE
apiVersion: v1
kind: Service
metadata:
  name: db-learn-nodejs-svc
  labels:
    app: db
    tier: learn-nodejs
spec:
  selector:
    app: db
    tier: learn-nodejs
  ports:
    - name: db-port
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-learn-nodejs-ingress
spec:
  rules:
    - http:
        paths:
        - path: /programming-languages
          pathType: Prefix
          backend:
            service:
              name: app-learn-nodejs-svc
              port: 
                number: 8001
