hello-world-all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: hello-world
          image: gcr.io/google-samples/hello-app:2.0
        - name: hello-kubernetes
          image: piinalpin/sample-node-web-app
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: web
spec:
  selector:
    app: web
  ports:
    - name: world-port
      protocol: TCP
      port: 8001
      targetPort: 50000
    - name: kubernetes-port
      protocol: TCP
      port: 8002
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  rules:
    - http:
        paths:
        - path: /hello-world
          pathType: Prefix
          backend:
            service:
              name: hello-service
              port: 
                number: 8001
        - path: /hello-kubernetes
          pathType: Prefix
          backend:
            service:
              name: hello-service
              port: 
                number: 8002
